--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
     ipcRenderer.on('app_version', (event, arg) => {
       ipcRenderer.removeAllListeners('app_version');
       version.innerText = 'Version ' + arg.version;
+      console.log("Version :: "+ version.innerText);
     });
 
     ipcRenderer.on('update_available', () => {
       ipcRenderer.removeAllListeners('update_available');
       message.innerText = 'A new update is available. Downloading now...';
       notification.classList.remove('hidden');
+      console.log("update_available :: ");
     });
 
     ipcRenderer.on('update_downloaded', () => {
@@ -61,6 +63,7 @@
       message.innerText = 'Update Downloaded. It will be installed on restart. Restart now?';
       restartButton.classList.remove('hidden');
       notification.classList.remove('hidden');
+      console.log("update_downloaded :: ");
     });
 
     function closeNotification() {
